# trftp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: deploy_docs.yml
cmake/: trftp-config.cmake.in
docs/: Doxyfile
examples/: CMakeLists.txt
examples/localhost/: CMakeLists.txt  localhost_client.cpp  localhost_server.cpp
include/trftp/: common.h  thread_safe_log.h  trftp.h  udp_socket.h  util.h
include/trftp/client/: client.h  client_log.h  client_transaction.h
include/trftp/server/: server.h  server_log.h  server_transaction.h  server_transaction_factory.h
src/: thread_safe_log.cpp  udp_socket.cpp  util.cpp
src/client/: client.cpp  client_log.cpp  client_transaction.cpp
src/server/: server.cpp  server_log.cpp  server_transaction.cpp
